fix nav on mobile

--- a/main/static/main/styles/main.css
+++ b/main/static/main/styles/main.css
@@ -489,6 +489,11 @@ button {
   padding-bottom: 10px;
   padding-left: 20px;
 }
+@media (max-width: 475px) {
+  .nav {
+    text-align: center;
+  }
+}
 
 .nav-header {
   font-size: 22px;
@@ -521,6 +526,13 @@ button {
   padding-top: 5px;
   padding-right: 15px;
   flex-shrink: 0;
+}
+@media (max-width: 475px) {
+  .nav-links {
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .nav-links a {
